--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "repo-template",
-  "version": "1.1.1",
-  "description": "Basic Repository Template",
+  "name": "node-template",
+  "version": "0.0.0",
+  "description": "Repository Template for NodeJS Projects",
   "author": "PatEvs",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/patevs/repo-template.git"
+    "url": "git+https://github.com/patevs/node-template.git"
   },
   "scripts": {
     "commit": "git-cz",
