--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "commitlint-config-gitmoji": "^1.0.1",
     "cz-emoji": "^1.2.1",
     "husky": "^4.2.5",
+    "lookpath": "^1.0.6",
     "np": "^6.3.1",
     "npm-check-updates": "^7.0.1",
     "script-progress": "^1.0.5",
