--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "husky": "^4.2.5",
     "lookpath": "^1.0.6",
     "np": "^6.3.1",
-    "script-progress": "^1.0.5",
-    "updates": "^10.2.15"
+    "script-progress": "^1.0.5"
   },
   "husky": {
     "hooks": {
