--- a/package.json
+++ b/package.json
@@ -21,5 +21,22 @@
     "husky": "^4.2.5",
     "np": "^6.4.0",
     "script-progress": "^1.0.5"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "./node_modules/commitlint-config-gitmoji"
+    ],
+    "rules": {
+      "header-max-length": [
+        0,
+        "always",
+        80
+      ]
+    }
   }
 }
