--- a/package.json
+++ b/package.json
@@ -32,11 +32,7 @@
       "./node_modules/commitlint-config-gitmoji"
     ],
     "rules": {
-      "header-max-length": [
-        0,
-        "always",
-        80
-      ]
+      "header-max-length": [0, "always", 80]
     }
   }
 }
