--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "np": "^6.5.0",
     "script-progress": "^1.0.5"
   },
+  "commitlint": {
+    "extends": ["./node_modules/commitlint-config-gitmoji"]
+  },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
