--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "url": "git+https://github.com/patevs/node-template.git"
   },
   "scripts": {
-    "release": "np",
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "updates": "script-progress node ./bin/checkUpdates"
+    "updates": "script-progress node ./bin/checkUpdates",
+    "release": "np"
   },
   "dependencies": {},
   "devDependencies": {
