--- a/.np-config.json
+++ b/.np-config.json
@@ -1,7 +1,7 @@
 {
   "anyBranch": false,
   "cleanup": true,
-  "tests": true,
+  "tests": false,
   "yolo": false,
   "publish": false,
   "preview": false,
@@ -10,4 +10,3 @@
   "contents": ".",
   "releaseDraft": true
 }
-
