--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-template",
-  "version": "1.11.0",
+  "version": "1.12.0",
   "description": "Repository Template for NodeJS Projects",
   "author": "PatEvs",
   "license": "MIT",
@@ -21,7 +21,9 @@
     "script-progress": "^1.0.5"
   },
   "commitlint": {
-    "extends": ["./node_modules/commitlint-config-gitmoji"]
+    "extends": [
+      "./node_modules/commitlint-config-gitmoji"
+    ]
   },
   "husky": {
     "hooks": {
