--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-template",
-  "version": "1.13.0",
+  "version": "1.14.0",
   "description": "Repository Template for NodeJS Projects",
   "author": "PatEvs",
   "license": "MIT",
@@ -25,8 +25,14 @@
       "gitmoji"
     ],
     "rules": {
-      "subject-empty": [0, "never"],
-      "type-empty": [0, "never"]
+      "subject-empty": [
+        0,
+        "never"
+      ],
+      "type-empty": [
+        0,
+        "never"
+      ]
     }
   },
   "husky": {
