--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   },
   "scripts": {
+    "prepare": "husky install",
     "updates": "script-progress node ./bin/checkUpdates",
     "release": "np"
   },
@@ -37,11 +38,6 @@
         0,
         "never"
       ]
-    }
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   }
 }
